# foley

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/: foley-dev-add-source  foley-dev-implement
_modules/: foley.html  index.html
_modules/foley/: audio.html  base.html  bootstrap.html  cli.html  licensing.html  qc.html  stores.html
_modules/foley/eval/: baseline.html  embedder.html  golden.html  retrieval.html
_modules/foley/index/: embedders.html  indexes.html  ingest.html  library.html  protocols.html  search.html  taggers.html
_modules/foley/index/taxonomy/: audioset.html  model.html  resolver.html  ucs.html
_modules/foley/obs/: recorder.html  redact.html  run_artifact.html  trace.html
_modules/foley/provenance/: credits.html  disclosure.html
_modules/foley/sources/: base.html  clotho.html  fsd50k.html  generate.html  http.html  pull.html  registry.html
_modules/foley/sources/elevenlabs/: adapter.html
_modules/foley/sources/freesound/: adapter.html
_modules/foley/sources/stable_audio/: adapter.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: foley.rst.txt
_sources/module_docs/foley/: audio.rst.txt  base.rst.txt  bootstrap.rst.txt  cli.rst.txt  eval.rst.txt  index.rst.txt  licensing.rst.txt  obs.rst.txt  provenance.rst.txt  qc.rst.txt  sources.rst.txt  stores.rst.txt
_sources/module_docs/foley/eval/: baseline.rst.txt  embedder.rst.txt  golden.rst.txt  retrieval.rst.txt
_sources/module_docs/foley/index/: embedders.rst.txt  indexes.rst.txt  ingest.rst.txt  library.rst.txt  protocols.rst.txt  search.rst.txt  taggers.rst.txt  taxonomy.rst.txt
_sources/module_docs/foley/index/taxonomy/: audioset.rst.txt  model.rst.txt  resolver.rst.txt  seed.rst.txt  ucs.rst.txt
_sources/module_docs/foley/obs/: recorder.rst.txt  redact.rst.txt  run_artifact.rst.txt  trace.rst.txt
_sources/module_docs/foley/provenance/: credits.rst.txt  disclosure.rst.txt
_sources/module_docs/foley/sources/: base.rst.txt  bbc_remarc.rst.txt  clotho.rst.txt  elevenlabs.rst.txt  foleyset.rst.txt  freesound.rst.txt  fsd50k.rst.txt  generate.rst.txt  http.rst.txt  pull.rst.txt  registry.rst.txt  sonniss.rst.txt  stable_audio.rst.txt
_sources/module_docs/foley/sources/elevenlabs/: adapter.rst.txt  config.rst.txt
_sources/module_docs/foley/sources/freesound/: adapter.rst.txt  config.rst.txt
_sources/module_docs/foley/sources/stable_audio/: adapter.rst.txt  config.rst.txt
foley/: __init__.py  audio.py  base.py  bootstrap.py  cli.py  licensing.py  qc.py  stores.py
foley/data/golden/: baseline.json  seed.json
foley/data/ring0/: manifest.json
foley/eval/: __init__.py  baseline.py  embedder.py  golden.py  retrieval.py
foley/index/: __init__.py  embedders.py  indexes.py  ingest.py  library.py  protocols.py  search.py  taggers.py
foley/index/taxonomy/: __init__.py  audioset.py  model.py  resolver.py  seed.py  ucs.py
foley/obs/: __init__.py  recorder.py  redact.py  run_artifact.py  trace.py
foley/provenance/: __init__.py  credits.py  disclosure.py
foley/sources/: __init__.py  base.py  bbc_remarc.py  clotho.py  foleyset.py  fsd50k.py  generate.py  http.py  pull.py  registry.py  sonniss.py
foley/sources/elevenlabs/: __init__.py  adapter.py  config.py
foley/sources/freesound/: __init__.py  adapter.py  config.py
foley/sources/stable_audio/: __init__.py  adapter.py  config.py
misc/docs/: design.md  research.md  roadmap.md
misc/docs/research/: 01-sfx-source-apis.md  02-genai-sfx-generation.md  03-sound-recognition-tagging.md  04-embeddings-indexing-search.md  05-context-retrieval-and-agent.md  06-weaving-mixing-mastering.md  07-licensing-provenance.md  08-evaluation-quality.md  09-audio-io-dsp-storage.md  10-facade-architecture.md  11-bootstrap-corpora-benchmarks.md  12-additional-dimensions.md  README.md  deep-research-prompts.md
module_docs/: foley.html
module_docs/foley/: audio.html  base.html  bootstrap.html  cli.html  eval.html  index.html  licensing.html  obs.html  provenance.html  qc.html  sources.html  stores.html
module_docs/foley/eval/: baseline.html  embedder.html  golden.html  retrieval.html
module_docs/foley/index/: embedders.html  indexes.html  ingest.html  library.html  protocols.html  search.html  taggers.html  taxonomy.html
module_docs/foley/index/taxonomy/: audioset.html  model.html  resolver.html  seed.html  ucs.html
module_docs/foley/obs/: recorder.html  redact.html  run_artifact.html  trace.html
module_docs/foley/provenance/: credits.html  disclosure.html
module_docs/foley/sources/: base.html  bbc_remarc.html  clotho.html  elevenlabs.html  foleyset.html  freesound.html  fsd50k.html  generate.html  http.html  pull.html  registry.html  sonniss.html  stable_audio.html
module_docs/foley/sources/elevenlabs/: adapter.html  config.html
module_docs/foley/sources/freesound/: adapter.html  config.html
module_docs/foley/sources/stable_audio/: adapter.html  config.html
skills/foley-dev-add-source/: SKILL.md
skills/foley-dev-implement/: SKILL.md
tests/: conftest.py  test_audio.py  test_base.py  test_bootstrap.py  test_cli.py  test_embedders.py  test_eval_retrieval.py  test_freesound.py  test_generate.py  test_golden.py  test_indexes.py  test_ingest.py  test_library.py  test_obs.py  test_provenance_credits.py  test_provenance_disclosure.py  test_qc.py  test_search.py  test_sources.py  test_stores.py  test_taggers.py  test_taxonomy.py
tests/eval/: test_metrics_vs_ranx.py
tests/golden/: seed.json
tools/: gen_ring0_fixture.py
