[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

# Ship the whole foley package incl. the tiny Ring-0 synthetic fixture
# (foley/data/ring0/*) so `foley demo` needs no corpus download (it still needs
# the foley[audio,clap] runtime extras; the CLAP model downloads on first use).
[tool.hatch.build.targets.wheel]
include = [
    "foley",
]

[tool.hatch.build.targets.sdist]
include = [
    "foley",
    "tests",
    "tools",
    "misc",
    "pyproject.toml",
    "README.md",
]

[project]
name = "foley"
version = "0.0.8"
description = "Unified facade for sourcing, indexing, and searching sound effects to weave into narration"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "sound-effects",
    "sfx",
    "audio",
    "foley",
    "audio-retrieval",
    "clap",
    "text-to-audio",
    "narration",
    "sound-design",
]
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "dol", # storage as a Mapping, local->cloud (byte + meta stores)
]

[project.license]
text = "mit"

[project.scripts]
foley = "foley.cli:main"

[project.urls]
Homepage = "https://github.com/thorwhalen/foley"
Repository = "https://github.com/thorwhalen/foley"
Documentation = "https://thorwhalen.github.io/foley"

[project.optional-dependencies]
audio = [
    "numpy",
    "soundfile",
    "soxr",
    "librosa",
    "pyloudnorm",
]
# CLAP embedder — the joint text<->audio retrieval engine (laion/larger_clap_general).
clap = [
    "transformers>=4.40",
    "torch",
]
# Hybrid vector+keyword index — LanceDB (vector column + Tantivy FTS + RRF in one table).
index = [
    "lancedb>=0.13",
]
# Minimal single-file fallback index (sqlite-vec + stdlib FTS5); no LanceDB needed.
index-sqlite = [
    "sqlite-vec>=0.1.0",
]
# Supervised AudioSet tagging on ingest — PANNs CNN14 (checkpoint auto-downloads).
tag = [
    "panns-inference",
]
# Retrieval-eval oracle — for the OPT-IN metric cross-check test ONLY. The nDCG
# PR gate + all metric code are pure numpy/stdlib and never import ranx. ranx
# pulls the numba/llvmlite chain foley bans from CI (same reason librosa is
# excluded from the "test" extra); it is deliberately NOT in
# [tool.wads.ci.install]. (pytrec_eval is a numba-free alternative but needs a
# compiler, so it is left out of the declared extra.)
eval = [
    "ranx>=0.3",
]
# Audio captioning on ingest (EnCLAP / Qwen2-Audio adapters plug in behind the
# Captioner protocol; no default ships yet). transformers/torch already in [clap].
caption = [
    "transformers>=4.40",
    "torch",
    "torchaudio",
]
# Live Freesound APIv2 retrieve adapter (by-reference; CC0). `requests` is imported
# lazily inside foley.sources.http.requests_transport ONLY, so the core stays
# dol-only. Deliberately NOT added to [tool.wads.ci.install] — the adapter tests
# inject a fake transport and never touch the network, keeping CI hermetic.
freesound = [
    "requests",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy",
    "soundfile",
    "soxr", # so resample/encode tests execute in CI (skipif-guarded in lean envs)
    "pyloudnorm", # so LUFS tests execute in CI
    # NB: librosa is intentionally NOT here — it pulls numba/llvmlite, which have no
    # wheels / a hard <3.10 guard on new CPython patches and break the CI install;
    # trim_silence tests importorskip librosa and run locally via foley[audio]. The
    # heavy backends (lancedb, sqlite-vec, torch) are likewise out — their tests are
    # importorskip/skipif-guarded (foley[index]/[index-sqlite]/[clap]).
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
    "audiofile: requires an audio-file codec lib (soundfile) to run",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

# Extras the wads CI installs (`.[extras]`). "test" pulls numpy/soundfile/soxr/
# pyloudnorm so the numpy-backed tests (base/qc/audio/search/taxonomy and the
# MemoryIndex hybrid+library path) actually run in CI. It deliberately omits
# librosa (numba/llvmlite break the CI install) and the heavy backends
# (lancedb/sqlite-vec/torch) — those tests importorskip/skipif-guard and run
# locally via foley[audio]/[index]/[index-sqlite]/[clap]. Without this section the
# CI installs only core deps and any top-level numpy import errors on collection.
[tool.wads.ci.install]
extras = [
    "test",
]

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
